--- a/ionic.config.json
+++ b/ionic.config.json
@@ -1,7 +1,8 @@
 {
   "name": "frontend-mobile",
+  "app_id": "",
+  "type": "ionic-angular",
   "integrations": {
     "cordova": {}
-  },
-  "type": "ionic-angular"
+  }
 }
